Correct opacity notation, handle smooth scroll on Safari

--- a/css/style.css
+++ b/css/style.css
@@ -18,29 +18,26 @@ body {
 h1,
 h2,
 h3 {
-  font-family: "Calisto MT", "Times New Roman", Times, serif;
+  font-family: 'Cormorant Garamond', "Calisto MT", "Times New Roman", Times, serif;
 }
 
 h1 {
   font-size: 2.3rem;
-  font-weight: 200;
 }
 
 .red-line {
-  border-bottom: 2px solid hsl(15, 100%, 32%, 0.2);
+  border-bottom: 2px solid rgba(165, 42, 0, 0.2);
 }
 
 h2 {
-  border-bottom: 3px solid hsl(0, 0%, 100%, 0.2);
+  border-bottom: 3px solid hsla(0, 0%, 100%, 0.2);
   font-size: 1.9rem;
-  font-weight: 200;
   padding-top: 70px;
 }
 
 h3 {
-  border-bottom: 3px solid hsl(0, 0%, 100%, 0.2);
+  border-bottom: 3px solid hsla(0, 0%, 100%, 0.2);
   font-size: 1.5rem;
-  font-weight: 200;
   padding-top: 10px;
 }
 
@@ -49,7 +46,7 @@ h3 {
 }
 
 .container {
-  background-color: hsl(0, 0%, 100%, 0.7);
+  background-color: hsla(0, 0%, 100%, 0.7);
   border-radius: 2px;
   padding: 50px 3rem;
   margin-top: 90px;
@@ -61,8 +58,8 @@ h3 {
 .header {
   background-image: linear-gradient(
     to right,
-    hsl(0, 0%, 26%, 0.7),
-    hsl(0, 0%, 100%, 0.1)
+    hsla(0, 0%, 26%, 0.7),
+    hsla(0, 0%, 100%, 0.1)
   );
   border-radius: 2px;
   text-align: right;
@@ -128,7 +125,19 @@ label {
 }
 
 footer {
-  color: hsl(0, 0%, 100%, 0.7);
+  color: hsla(0, 0%, 100%, 0.7);
   text-align: center;
   padding-bottom: 1.5rem;
+}
+
+/* Extra small devices (portrait phones, less than 576px) */
+@media (max-width: 575.98px) {
+  .header {
+    padding-right: 1rem;
+    padding-left: 1rem;
+  }
+
+  .container {
+    padding: 50px 1rem;
+  }
 }
